// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDeferred > state tracking > after reject 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.reject(new Error("test"));
d.promise.catch(() => {
});
╠══════════════════════════════════════════════════╣ OUTPUTS RETURN OBJECT
{
  promise: Promise [Promise] {},
  resolve: [Function: resolve],
  reject: [Function: reject],
  isResolved: false,
  isRejected: true,
  isSettled: true
}
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > state tracking > after resolve 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS RETURN OBJECT
{
  promise: Promise [Promise] {},
  resolve: [Function: resolve],
  reject: [Function: reject],
  isResolved: true,
  isRejected: false,
  isSettled: true
}
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > state tracking > initial 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER

╠══════════════════════════════════════════════════╣ OUTPUTS RETURN OBJECT
{
  promise: Promise [Promise] {},
  resolve: [Function: resolve],
  reject: [Function: reject],
  isResolved: false,
  isRejected: false,
  isSettled: false
}
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > strict > reject resolve calls throw 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.reject(new Error("test"));
d.promise.catch(() => {
});
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS THROW ERROR
Error: Deferred promise already settled
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > strict > resolve reject calls throw 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.reject(new Error("test"));
d.promise.catch(() => {
});
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS THROW ERROR
Error: Deferred promise already settled
╚══════════════════════════════════════════════════╝"
`;

exports[`createDeferred > strict > resolve resolve calls throw 1`] = `
"
╔══════════════════════════════════════════════════╗ RUNNER
d.resolve(1);
d.resolve(1);
╠══════════════════════════════════════════════════╣ OUTPUTS THROW ERROR
Error: Deferred promise already settled
╚══════════════════════════════════════════════════╝"
`;
